--- a/Index.html
+++ b/Index.html
@@ -17,6 +17,7 @@
         <ul data-role="listview" data-inset="true">
           <li><a href="#links">Sweet Links</a></li>
           <li><a href="#tools">Great Tools</a></li>
+          <li><a href="https://github.com">GitHub</a></li>
         </ul>
       </div>
       <footer data-role="footer" data-position="fixed">
@@ -31,6 +32,27 @@
       </header>
       <div class="content" data-role="content">
         <h1>Links</h1>
+        <div data-role="collapsible-set">
+          <div data-role="collapsible" data-collapsed="false">
+            <h3>Git Homepage</h3>
+            <p>Main website for information regarding <a href="http://git-scm.com" target="_blank">Git</a>.</p>
+          </div>
+          <div data-role="collapsible">
+            <h3>Git Documentation</h3>
+            <p>Git documentation site containing Reference Manual and the
+              Pro Git book is <a href="http://git-scm.com/documentation" target="_blank">here</a>.</p>
+          </div>
+          <div data-role="collapsible">
+            <h3>GitHub</h3>
+            <p>GitHub is the most popular cloud service for sharing <a href="https://github.com" target="_blank">git
+              repos online</a>.</p>
+          </div>
+          <div data-role="collapsible">
+            <h3>Learn Git</h3>
+            <p><a href="http://learn.github.com/" target="_blank">Learn Git</a>
+             is a tutorial hosted at GitHubgit.</p>
+          </div>
+        </div>
       </div>
       <footer data-role="footer" data-position="fixed">
         <small><em>&nbsp;Copyright &copy; Oy Attracs Ab, 2013</em></small>
